--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
   </head>
   <!-- css bootstrap -->
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css" />
-  <!-- JavaScript Bundle with Popper -->
+  <!-- JavaScript Bundle -->
   <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.js" crossorigin="anonymous">
+  </script>
   <!-- css -->
   <link rel="stylesheet" href="index.css" />
   <!-- link  font -->
