--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
           <h1>FEATURES</h1>
           <br />
           <br />
-          <ul class="a">
+          <ul class="text-satu">
             <li>
               <h3>TRADITIONAL GAME</h3>
               <p>If You Miss Your Chilhood, We Provide <br />Many Traditional Game Here</p>
             </li>
           </ul>
-          <ul class="b">
+          <ul class="text-dua">
             <li>
               <h3>GAME SUIT</h3>
             </li>
