Masukin link game html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="fw-light">PLAY TRADITIONAL GAME</h1>
             <p class="lead" id="teksgame1">Experience new tradisional game play</p>
             <p>
-              <a href="#" class="btn btn-warning my-2">PLAY</a>
+              <a href="game.html" class="btn btn-warning my-2">PLAY</a>
             </p>
           </div>
         </div>
